--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rlp": "^2.0.0",
     "scrypt-async": "^1.2.0",
     "tweetnacl": "0.13.2",
+    "tweetnacl-util": "^0.15.0",
     "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
